fix: remove z-index mixin

--- a/packages/components-css/src/link/_mixin.scss
+++ b/packages/components-css/src/link/_mixin.scss
@@ -7,19 +7,12 @@
   align-items: baseline;
   column-gap: var(--rhc-link-column-gap, inherit);
   display: inline-flex;
-  font-family: var(--rhc-font-family-primary, inherit);
-  font-size: var(--rhc-font-size-xs-desktop, inherit);
-  line-height: var(--rhc-line-height-md, inherit);
 }
 
 @mixin rhc-link--icon {
   align-self: center;
   font-size: 1em;
   inline-size: 1em;
-}
-
-@mixin rhc-link--focus-visible {
-  z-index: 1;
 }
 
 @mixin rhc-link--inline {
