--- a/packages/components-css/src/link/index.scss
+++ b/packages/components-css/src/link/index.scss
@@ -22,13 +22,6 @@
   @include mixin.rhc-link--icon;
 }
 
-.nl-link:focus-visible,
-.nl-link--focus-visible,
-.nl-link:focus,
-.nl-link--focus {
-  @include mixin.rhc-link--focus-visible;
-}
-
 .nl-link .rhc-link__sr-only {
   @include button-mixin.invisible-but-accessible;
 }
